# pcre2-ocaml

./: CHANGES.md  README.md  dune-project  pcre2.opam
examples/: Makefile  README.md  cloc.ml  count_hash.ml  dfa_restart.ml  dune  pcre2grep.ml  subst.ml
src/: Makefile  dune  pcre2.mli  pcre2_stubs.c
src/config/: discover.ml
